components/baremetal/k8s/sample-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    # Replace with IP of host
    - host: product.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: productpage
              servicePort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: test
  labels:
    app: productpage
    service: productpage
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 9080
  selector:
    app: productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
  namespace: test
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
        - name: productpage
          image: docker.io/istio/examples-bookinfo-productpage-v1:1.15.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
